--- a/README
+++ b/README
@@ -50,11 +50,9 @@ Install:
 
 Support:
 
-    CAPITUS is developed through a distributed development environment. Therefore, e-mail is
-    the preferred way to discuss various items. Most of the conversations regarding the 	development of CAPITUS
-    is managed through the "info [at] capitus [dot] com" mailinglist.
-    
-        https://lists.sourceforge.net/lists/listinfo/capitus-maindev
+    CAPITUS is developed through a distributed development environment. Therefore, e-mail is the preferred way 
+    to discuss various items. Most of the conversations regarding the development of CAPITUS is managed through 
+    the "info [at] capitus [dot] com" mailinglist.
 
     For those who want more general discussion on Humanitarian ICT,
 
