--- a/README
+++ b/README
@@ -66,7 +66,7 @@ Other:
 
         http://www.reliefsource.org/foss/index.php/Sahana
 
-    CAPITUS Development Wiki for contributors,
+    CAPITUS Development Wiki for Users and Developers,
 
         http://www.capitus.com/wiki/
 
